feat: binary builds per platform